--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "reselect": "^5.1.1",
     "sass": "^1.64.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.12",
